@@ -307,7 +307,8 @@
     XX(ShardId, shard_id) \
     XX(RootNodeId, root_node_id) \
     XX(AccountStatistics, account_statistics) \
-    XX(ResolveCached, resolve_cached)
+    XX(ResolveCached, resolve_cached) \
+    XX(Depth, depth)
 
 namespace NYT {
 
